# BciPy

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  DEVELOPMENT.md  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  NOTES.md  OF_NAR_FIR_all_models.csv  OF_NAR_FIR_flat_all_models.csv  OF_NAR_IIR_all_models.csv  OF_NAR_IIR_flat_all_models.csv  PCARDAKDE_OF_scikit_results.csv  README.md  RSVPKeyboard.exe - Shortcut.lnk  TROUBLESHOOTING.md  WD_AAR_FIR_flat_all_models.csv  WD_AAR_IIR_all_models.csv  WD_AAR_IIR_all_models_dropped.csv  WD_AAR_IIR_flat_all_models.csv  WD_ESAR_IIR_all_models.csv  WD_ESAR_IIR_all_models_dropped.csv  WD_EventSAR_IIR_all_models.csv  WD_EventSAR_IIR_all_models_dropped.csv  WD_FilterByType_IIR_validation_all_models.csv  WD_FilterByType_IIR_validation_all_models_dropped.csv  WD_NAR_FIR_BroadbandFilter_all_models.csv  WD_NAR_FIR_flat_all_models.csv  WD_NAR_IIR_BroadbandFilter_all_models.csv  WD_NAR_IIR_all_models.csv  WD_NAR_IIR_flat_all_models.csv  WD_PF_SAR_IIR_all_models.csv  WD_PF_SAR_IIR_all_models_dropped.csv  WD_SAR_FIR_all_models.csv  WD_SAR_FIR_all_models_dropped.csv  WD_SAR_FIR_flat_all_models.csv  (+44 more)
.bcipy/: README.md
.bcipy/downloads/: pyWinhook-1.6.2-cp39-cp39-win_amd64.whl
.bcipy/experiment/: experiments.json
.bcipy/field/: fields.json
.github/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  main.yml  publish_to_pypi.yml  publish_to_test_pypi.yml
acquisition/: .gitignore  DEVELOPMENT.md  LICENSE.txt  README.md  buffer.py  buffer_server.py  client.py  device_info.py  marker_writer.py  processor.py  pytest.ini  record.py  requirements.txt  setup.py  util.py
acquisition/daq/: buffer.py  client.py  processor.py
acquisition/datastream/: __init__.py  generator.py  lsl_server.py  producer.py  server.py  tcpclient.py
acquisition/demo/: client.py  client_and_server.py  demo_client.py  demo_client_and_server.py  demo_server.py  server.py
acquisition/protocols/: __init__.py  device.py  dsi.py  dsi_device.py  dsi_protocol.py  lsl_device.py  protocol.py  registry.py  util.py
alpha/: README.md  alpha-experiment.py  collect_stats_current_model.py  current-model.py  preprocessing.py  run-all-alpha.py  run-current-model.py
bci_tasks/: README.md  main_frame.py  start_task.py  task.py  wrappers.py
bci_tasks/RSVP/: free_spell.py  (+4 more)
bcipy/: config.py  exceptions.py  main.py  preferences.py
branch_test/: AL12311987_IRB130107_ERPCalibration.mat  copy_phrase_simulation.py  demo_query_method.py  oracle.py  progress_bar.py  synthesized_user.py
demo/: bci_main_demo.py
display/: Demo_rsvp_disp.py  Demo_rsvp_disp_images.py  README.md  demo_calibration_rsvp.py  demo_copyphrase_rsvp.py  demo_freespelling_rsvp.py  display_main.py  requirements.txt  rsvp_disp.py  rsvp_disp_modes.py  trigger_helpers.py
docs/: README.md  conf.py  index.rst
eeg_model/: demo.py  inference.py  offlineAnalysisScreen.py  offline_analysis.py  offline_analysis_m.py  offline_analysis_screen.py
feedback/: feedback.py
gui/: BCInterface.py  README.md  RSVPKeyboard.py  convertinitojson.py  gui_fx.py  gui_main.py  parameters.json  params_form.py  params_server.py  requirements.txt
helpers/: acquisition.py  acquisition_related.py  bci_task_related.py  data_collection.py  data_viz.py  display.py  eeg_model_wrapper.py  lang_model_related.py  load.py  save.py  stim_gen.py  trigger_helpers.py  triggers.py  use_LMWrapper.py
inquiry_preview_debug/: data.py  plot.py
io/: load.py  save.py
language_model/: Dockerfile  README.md  __init__.py  dockerRun.md  dockerRun.txt  language_model.py
parameters/: parameters.json
rw/: load.py
scripts/: README.md  feedback_logs.py  offset_viewer.py  session_tools.py  timing_tools.py
signal_model/: offline_analysis.py  offline_analysis_m.py
signal_processing/: sig_pro.py
utils/: convert.py  filter_consistency_test.m  filters.py  force_pypath.py  get_system_info.py  gui_fx.py  moduleLoader.py  module_loader.py  pypaths.py  read_csv_dat.py  stim_gen.py  toggleNumpy.m  triggerdecoder.py
(+1215 files in other folders)
